--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
     
     <dependencyManagement>
